--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,275 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Gideon+Roman&family=Open+Sans+Condensed:wght@300&family=Poppins:wght@200;300;400;500;600&family=Roboto:ital,wght@0,300;0,400;1,500&display=swap');
 
-.background{
-    filter: blur(3px);
+body {
+    background: rgb(233, 176, 71);
+    background: linear-gradient(0deg, rgb(238, 170, 81) 0%, rgb(139, 104, 7) 100%);
+    margin: 0;
+    font-family: 'Merriweather', serif;
+    color: #fff;
+    height: 100%;
+    width: 100%;
+    background-attachment: fixed;
+    background-repeat:no-repeat;
+    background-size: cover;;
+}
+.container{
+    display:flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+}
+.mainContainer{
+    position: relative;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: fit-content;
+    height: fit-content;
+    background-color: #ffff;
+    border-radius: 20px;
+    box-shadow: 5px 10px 20px rgb(0 0 0 / 60%);
+    opacity: 90%;
+    padding: 5%;
+    margin: 2%;
+}
+h1 {
+    font-family: 'Fira Sans', sans-serif;
+    padding: 10%;
+    width: max-content;
+    font-size: 20px;
+    border-radius: 95px;
+    box-shadow: 0 0 10px #000;
+    color: #916c0c;
+    text-align: center;
+}
+.formContainer{
+    color: #946e0e;
+    line-height: 3;
+    font-weight: bold;
+    font-size: 17px;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.loginButton{
+    color: #fff;
+    font-size: 10px;
+    font-weight: bold;
+    cursor: pointer;
+    width: 15em;
+    border-color: #fff;
+    border-radius: 2em;
+    height: 3em;
+    background-color: #906b0b;
+}
+.loginButton:hover{
+    color: #906b0b;
+    background-color: #fff;
+    border-color: #906b0b;
+}
+.input{
+    border-radius: 15px;
+    font-size: 12px;
+    padding-left: 15px;
+    border-color: #936d0d;
+}
+
+/******** Home Page *******/
+/*************************/
+
+.homePage{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+.header{
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    flex-direction: column;
+    position: relative;
+    height: 36em;
+    width: 100%;
+    box-shadow: 0px 0px 30px rgb(0 0 0 / 70%);
+    top: 0%;
+}
+.header_img{
+    width: 100%;
+    position: absolute;
+    height: 33em;
+    object-fit: cover;
+}
+  .webName{
+    display: flex;
+    align-self: self-start;
+    margin: 5%;
+    font-size: 6em;
+  }
+.menuContainer{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    position: relative;
+    height: 4em;
+    align-items: center;
+    justify-content: end;
+    padding: 1em;
     width: 100%;
 }
 
-.loginContainer{
-    position: absolute;
-    
-     width: 30vw;
-     height: 30vw;
-     background-color: #ffff;
-     border-radius: 2em;
+.userName{
+    text-align: center;
+    justify-content: center;
+    font-size: 1.5em;
+    color: #fff;
+    padding: 0.2em;
+    font-weight: bold;
+    margin-right: 1em;
+}
+.menuButton{
+    font-size: 1em;
+    padding: 0.5em;
+    border-radius: 0.5em;
+    outline: none;
+    border: solid #fff;
+    color: #ffffff;
+    cursor: pointer;
+    transition: 0.3s ease;
+    background-color: #c38d30;
+    text-align: center;
+    margin-right: 1em;
+    font-weight: bold;
+}
+.menuButton:hover{
+ color: #fff;
+}
+@media (max-width:768px) {
+    .menuButton{
+        display: none;
+    }
+    .footer{
+        flex-direction: column !important;
+    }
+    .userName{
+        margin-right: 10%;
+    }
+  .navBar{
+      display: block  !important;
+  }  
+.header .links{
+    position: relative;
+}
+.header .links .icon {
+    width: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
+.header .links .icon span{
+    background-color: #333;
+    margin-bottom: 5px;
+    height: 2px;
+}
+.header .links .icon span{
+    width: 100%;
+}
+.header .links ul::before{
+ content:"";
+ border-width: 10px;
+ border-style: solid;
+ border-color: transparent transparent #f6f6f6 transparent;
+ position: absolute;
+ right: 5px;
+ top: -20px;
 
 }
+.header .links ul li a {
+   display: block;
+   padding: 15px;
+   text-decoration: none;
+   color: #333;
+   transition:0.3s ;
+}
+.header .links ul li :hover{
+   padding-left: 25px;
+}
+.header .links ul li:not(:last-child) a {
+   border-bottom : 1px solid #ddd ;
+}
+    
+}
+/********* nav bar *********/
+.navBar{
+    display: none;
+}
+.header .links ul{
+    LIST-STYLE: NONE;
+    MARGIN: 0;
+    padding: 0;
+    background-color: #f6f6f6;
+    position: absolute;
+    right: 0;
+    min-width: 200px;
+    top: calc(100% + 15px );
+    display: none;
+    z-index: 1;
+ 
+ }
+ /***************** Home Body ******************/
+ 
+
+/***** footer *********/
+.footer{
+    display: flex;
+    background-color: #06192b;
+    flex-direction: row;
+    box-shadow: 0px 0px 30px;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    bottom: 0%;
+}
+
+.webName-footer{
+    width: 12em;
+    padding: 15%;
+}
+.names{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1em;
+    color: #fff;
+}
+.names div{
+    color: #e5d549;
+    font-size: 1.5rem;
+}
+.team{
+    width: 14em;
+    text-align: center;
+    font-size: 1.1rem;
+}
+@media (max-width:812px) {
+    .userName{
+    margin-right: 0;
+    }
+}
+@media (max-width:337px) {
+    .homePage{
+        width: fit-content ;
+    }
+    
+}
+
+/********* End Home Page *******/
+/*******************************/
