--- a/css/style.css
+++ b/css/style.css
@@ -127,19 +127,9 @@ h1 {
     position: relative;
     height: 4em;
     align-items: center;
-    justify-content: end;
+    justify-content: center;
     padding: 1em;
     width: 100%;
-}
-
-.userName{
-    text-align: center;
-    justify-content: center;
-    font-size: 1.5em;
-    color: #fff;
-    padding: 0.2em;
-    font-weight: bold;
-    margin-right: 1em;
 }
 .menuButton{
     font-size: 1em;
@@ -169,9 +159,6 @@ h1 {
     }
     .footer{
         flex-direction: column !important;
-    }
-    .userName{
-        margin-right: 5%;
     }
   .navBar{
       display: block  !important;
@@ -337,3 +324,71 @@ h1 {
 
 /********* End Home Page *******/
 /*******************************/
+
+/************ ADD BOOK PAGE  ***************************/
+.addContainer{
+    position: relative;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    height: fit-content;
+    background-color: #ffff;
+    border-radius: 20px;
+    box-shadow: 5px 10px 20px rgb(0 0 0 / 60%);
+    opacity: 90%;
+    padding: 5%;
+    margin: 2%;
+}
+.back{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.back a{
+    display: inline-block;
+    font-size: 1em;
+    width: 1em;
+    height: 1em;
+    padding: 0.3em;
+    /* line-height: 100px; */
+    text-align: center;
+    transition: .4s linear;
+    position: relative;
+    border-radius: 50%;
+    color: #b59955;
+    background-color: #fff;
+  }
+  .back a:hover{
+    color: #fff;
+    background-color: #b59955;
+  }
+  .title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+.addForm{
+    color: #946e0e;
+    line-height: 3;
+    font-weight: bold;
+    font-size: 17px;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+}
+.addip{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+@media (max-width:340px) {
+    .addip div{
+        display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+    .addForm{
+        align-items: center;
+    } 
+}
