--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,29 @@ h1 {
  
  }
  /***************** Home Body ******************/
+.homeContainer{
+    width: 100%;
+    height: 75vh;
+    display: grid;
+    grid-template-rows: 20% 80%;
+    justify-content: center;
+    align-items: center;
+}
+.search{
+    border-radius: 15px;
+    font-size: 12px;
+    padding-left: 15px;
+    border-color: #936d0d;
+    width: 35vw;
+    height: 7vh;
+}
+.bookshow{
+    
+}
+
+
+
+
  
 
 /***** footer *********/
