--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,12 @@ h1 {
     justify-content: center;
     align-items: center;
 }
+.searchsection{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
 .search{
     border-radius: 15px;
     font-size: 12px;
@@ -257,8 +263,32 @@ h1 {
     width: 35vw;
     height: 7vh;
 }
+#searchicon{
+    display: inline-block;
+    font-size: 1em;
+    width: 1em;
+    height: 1em;
+    padding: 0.3em;
+    text-align: center;
+    transition: .4s linear;
+    position: relative;
+    border-radius: 50%;
+    justify-self: center;
+    cursor: pointer;
+  }
+#searchicon:hover{
+    color: #fff;
+    background-color: #b59955;
+  }
+
 .bookshow{
-    
+    width: 100%;
+    height: 80%;
+    background: #fff;
+    opacity: 50%;
+    border-radius: 2em;
+    text-align: center;
+    justify-self: center;
 }
 
 
@@ -374,7 +404,6 @@ h1 {
     width: 1em;
     height: 1em;
     padding: 0.3em;
-    /* line-height: 100px; */
     text-align: center;
     transition: .4s linear;
     position: relative;
