--- a/css/style.css
+++ b/css/style.css
@@ -288,8 +288,11 @@ h1 {
     opacity: 50%;
     border-radius: 2em;
     text-align: center;
-    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
 
 
 
